GNU SASL NEWS -- History of user-visible changes.
Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
See the end for copying conditions.

Note that changes to the GNU SASL Library is documented in lib/NEWS.
This file track changes to the remaining, non-library, parts of GNU
SASL.  That include the manual, the command line tool, and self tests.

* Version 0.2.26 (unreleased)

* Version 0.2.25 (released 2008-03-10)

** gsasl: Fix buffering issue to avoid mixing stdout/stderr outputs.
This would manifest itself when redirecting output to a pipe, such as
when used with Gnus.  Reported by Enrico Scholz
<enrico.scholz@informatik.tu-chemnitz.de>, see
<http://thread.gmane.org/gmane.comp.gnu.gsasl.general/123>.

** Fix non-portable use of brace expansion in makefiles.

* Version 0.2.24 (released 2008-01-15)

** Link self-tests with gnulib, to fix link failures under MinGW.

* Version 0.2.23 (released 2008-01-15)

** Improve CRAM-MD5 self-test to detect if challenges are the same.

** Improve gsasl --help and --version to conform with GNU standards.

** Use gettext 0.17.

** Update gnulib files.

* Version 0.2.22 (released 2007-10-08)

** Development git tree moved to savannah.
See <https://savannah.gnu.org/projects/gsasl/>.

** Fix warnings when building the tool 'gsasl'.

** Update gnulib files.

* Version 0.2.21 (released 2007-08-22)

** Fix typos in manual.
Tiny patch from Brad Hards <bradh@frogmouth.net>.

** Update gnulib files.

* Version 0.2.20 (released 2007-08-11)

** Update gnulib files.

* Version 0.2.19 (released 2007-08-09)

** Command-line tools, examples, etc are now licensed under the
** GPL version 3 (or later).
The library remains licensed under LGPL version 2.1 (or later).

** Updated documentation as per license change.

** Update gnulib files.

** Update translations.

* Version 0.2.18 (released 2007-06-07)

** Update gnulib files.
Fixes cross-compilation to uClinux.

* Version 0.2.17 (released 2007-06-01)
