@@ -8,6 +8,12 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.26 (unreleased)
 
+** Translations files not stored directly in git to avoid merge conflicts.
+This allows us to avoid use of --no-location which makes the
+translation teams happier.
+
+** Update gnulib files.
+
 * Version 0.2.25 (released 2008-03-10)
 
 ** gsasl: Fix buffering issue to avoid mixing stdout/stderr outputs.
